--- a/src/bottom-editor.css
+++ b/src/bottom-editor.css
@@ -13,6 +13,7 @@
 bottom-editorarea {
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-rows: 2fr 1fr auto;
     gap: 0.5em;
     flex: 1;
     min-height: 0;
